# esp32_ws2812

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv
components/bmp/: CMakeLists.txt  bmp.c  bmp.h
components/common_utils/: CMakeLists.txt  common_util.c  common_util.h  util.c
components/https_get/: CMakeLists.txt  https_get.c  https_get.h
components/led_strip/: CMakeLists.txt  led_strip.h  led_strip_rmt_ws2812.c  led_strip_util.c
components/led_strip/include/: led_strip.h
components/time_sync/: CMakeLists.txt  time_sync.c  time_sync.h
data/: .gitignore  README  c1  cc1  cc2  cfg1.json  h1  h2  init  j1.json  rot.sh  test.json  test1.json  test10.json  test11.json  test12.json  test13.json  test14.json  test15.json  test2.json  test3.json  test4.json  test5.json  test6.json  test7.json  test8.json  test9.json
data/60/: buildcolor.sh  buildrainbow.sh  c2  c3  f.sh  h1  h3  h4  init  r1.sh  rot-sh  rot.sh  w1
main/: CMakeLists.txt  color.c  color.h  config.c  config.h  create_config.c  create_demo.c  create_events.c  create_events.h  create_objects.c  create_tracks.c  decode_json.c  esp32_ws2812.h  esp32_ws2812_basic.h  esp32_ws2812_protos.h  esp32_ws2812_types.h  event_util.c  global_data.c  handle_fs.c  json_util.c  led_strip.c  led_strip.h  led_strip_proto.h  local.h  location_based_events.c  location_based_events.h  logger.c  logger.h  main.c  main_content.html  main_page.html  move_events.c  move_events.h  paint_pixel.c  paint_pixel.h  process_bmp.c  process_bmp.h  process_events.c  process_objects.c  rest_client.c  (+14 more)
main/webcontent/: demo_content.html  example.json  example_config.json  files_content.html  help_content.html  main_content.html  main_page.html  playlist_content.html  settings_content.html  stylesheet.css
